--- a/personal-site/css/styles.css
+++ b/personal-site/css/styles.css
@@ -68,9 +68,28 @@ a:hover {
 
 }
 
+.resume-section {
+    margin-bottom: 50px;
+    
+}
+
+.resume-section h2 {
+    border-bottom: 2px dashed #d3d4d6;
+}
 
 /* profile 
 -----------------------*/
+.project-item {
+    display: flow-root;
+    margin: 30px 0;
+}
+
+.project-item img {
+    width: 300px;
+    float: left;
+    margin-right: 20px;
+
+}
 
 /*  projects 
 ------------------------*/
