Updating footer with flex box

--- a/personal-site/css/styles.css
+++ b/personal-site/css/styles.css
@@ -50,10 +50,19 @@ a:hover {
 .home {
     background: url(../images/bg-home-office-studio.jpg) no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
 }
 
+
 .home .content-wrapper {
-    background: rgb(255 255 255 / 0.9);
+    
+    flex: 1 0 auto;
+}
+
+.content-bg {
+background: rgb(255 255 255 / 0.9);
+padding: 30px;
 }
 
 /* resume 
