--- a/other stuff/explicit_grid.css
+++ b/other stuff/explicit_grid.css
@@ -2,8 +2,9 @@
     border: 4px solid black;
       display: grid; 
       width: 400px;
-       grid-template-columns: 100px repeat(2, 1fr); 
-       grid-template-rows: 100px ; 
+       grid-template-columns: repeat(3, 1fr); 
+       grid-template-rows: 200px ;
+       grid-auto-rows: 100px; 
 }
 
 .grid-item {
