--- a/personal-site/css/styles.css
+++ b/personal-site/css/styles.css
@@ -111,6 +111,12 @@ padding: 30px;
 /* work experience
 ---------------------*/
 
+.work-item {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    column-gap: 20px;
+}
+
 /* education 
 -------------------------*/ 
 
