--- a/personal-site/css/styles.css
+++ b/personal-site/css/styles.css
@@ -25,8 +25,14 @@ html, body {
 
 body {
     background: #f6f6f6;
-    margin: 0;
+    margin: 0;    
+    font-family: 'Open Sans',sans-serif;
 }
+
+h1, h2, h3 {
+    font-family: 'Caveat', cursive;
+        
+} 
 
 .content-wrapper {
     margin: 0 auto;
